--- a/formulario.html
+++ b/formulario.html
@@ -32,5 +32,10 @@
 </body>
 </html>
 <label>
-    <input type="radio" nome="devweb" value="frontend" checked><Front-end></Front-end>
+    <input type="radio" nome="devweb" value="frontend" checked><Front-end>
+        </Front-end>
+    </input>
+</label>
+<label>
+    <input type="radio" nome="devweb" value="fullstack">Fullstack
 </label>
