--- a/formulario.html
+++ b/formulario.html
@@ -38,4 +38,12 @@
 </label>
 <label>
     <input type="radio" nome="devweb" value="fullstack">Fullstack
+</input>
 </label>
+<label>
+    <br>
+    <div class="campo">
+        <label for="senioridade"><strong>Senioridade</strong></label>
+        <select id="senioridade"
+    </div>
+
