--- a/formulario.html
+++ b/formulario.html
@@ -44,6 +44,9 @@
     <br>
     <div class="campo">
         <label for="senioridade"><strong>Senioridade</strong></label>
-        <select id="senioridade"
+        <select id="senioridade"></select>
+        <option selected disable value="">Selecione</option>
+        <option>senior</option>
+
     </div>
 
