--- a/formulario.html
+++ b/formulario.html
@@ -48,5 +48,11 @@
         <option selected disable value="">Selecione</option>
         <option>senior</option>
 
-    </div>
 
+    </div>
+<fieldset class="grupo">
+    <div class="campo">
+        <label><strong>Selecione as tecnologias que utiliza:</strong></label><br><br>
+        <input type="checkbox" id="tecnologia1" value="HTML">
+    </div>
+</fieldset>
