--- a/formulario.html
+++ b/formulario.html
@@ -54,5 +54,10 @@
     <div class="campo">
         <label><strong>Selecione as tecnologias que utiliza:</strong></label><br><br>
         <input type="checkbox" id="tecnologia1" value="HTML">
+        <label type="tecnologia1">HTML</label>
+        <input type="checkbox" id="tecnologia2" value="CSS">
+        <label type="tecnologia2">CSS</label>
+        <input type="checkbox" id="tecnologia3" value="javascript">
+        <label type=""
     </div>
 </fieldset>
