--- a/formulario.html
+++ b/formulario.html
@@ -58,6 +58,10 @@
         <input type="checkbox" id="tecnologia2" value="CSS">
         <label type="tecnologia2">CSS</label>
         <input type="checkbox" id="tecnologia3" value="javascript">
-        <label type=""
+        <label type="tecnologia3">Javascript</label>
+        <input type="checkbox" id="tecnologia4" value="PHP">
+        <label type="tecnologia4">PHP</label>
+        <input type="checkbox" id="tecnologia5" value="C#">
+        <label 
     </div>
 </fieldset>
