--- a/formulario.html
+++ b/formulario.html
@@ -62,6 +62,15 @@
         <input type="checkbox" id="tecnologia4" value="PHP">
         <label type="tecnologia4">PHP</label>
         <input type="checkbox" id="tecnologia5" value="C#">
-        <label 
+        <label type="tecnologia5">C#</label>
+        <input type="checkbox" id="tecnologia6" value="python">
+        <label type="tecnologia6">Python</label>
+        <input type="checkbox" id="tecnologia7" value="java">
+        <label type="tecnologia7">Java</label>
     </div>
 </fieldset>
+<div class="campo">
+    <br>
+    <label><strong>Conte um pouco da sua experiencia:</strong></label>
+    
+</div>
